--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
         <h1>Registration Form</h1>
         <p>Please fill out this form with the required information.</p>
         <form action="https://register-demo.freecodecamp.org">
-            <fieldset></fieldset>
+            <fieldset>
+                <label>Enter your first name:</label>
+                <label>Enter your last name:</label>
+                <label>Enter your email:</label>
+                <label>Create a new password:</label>
+            </fieldset>
             <fieldset></fieldset>
             <fieldset></fieldset>
         </form>
