Input elements added.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
         <p>Please fill out this form with the required information.</p>
         <form action="https://register-demo.freecodecamp.org">
             <fieldset>
-                <label>Enter your first name:</label>
-                <label>Enter your last name:</label>
-                <label>Enter your email:</label>
-                <label>Create a new password:</label>
+                <label>Enter your first name: <input type="text" required></label>
+                <label>Enter your last name: <input type="text" required></label>
+                <label>Enter your email: <input type="email" required></label>
+                <label>Create a new password: <input type="password" required pattern="[a-z0-5]{8,}"></label>
             </fieldset>
             <fieldset></fieldset>
             <fieldset></fieldset>
+            <input type="submit" value="Submit">
         </form>
     </body>
 </html>
