Select element added and css fixed.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Registration Form</title>
-        <link rel="stylesheet" href="/css/styles.css"/>
+        <link rel="stylesheet" href="css/styles.css"/>
     </head>
     <body>
         <h1>Registration Form</h1>
@@ -23,6 +23,16 @@
                 <label>Upload a profile picture: <input type="file" /></label>
                 <label>Input your age (years): <input type="number" min="13" max="120"></label>
             </fieldset>
+            <select>
+                <label>How did you hear about us?
+                    <option value="">(Please select one)</option>
+                    <option value="1">Google</option>
+                    <option value="2">Instagram</option>
+                    <option value="3">Friends</option>
+                    <option value="4">Other</option>
+                </label>
+            </select>
+            <label>Tell us more about you: <textarea></textarea></label>
             <input type="submit" value="Submit">
         </form>
     </body>
