--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
         <p>Please fill out this form with the required information.</p>
         <form action="https://register-demo.freecodecamp.org">
             <fieldset>
-                <label>Enter your first name: <input type="text" required></label>
-                <label>Enter your last name: <input type="text" required></label>
-                <label>Enter your email: <input type="email" required></label>
-                <label>Create a new password: <input type="password" required pattern="[a-z0-5]{8,}"></label>
+                <label>Enter your first name: <input name="fname" type="text" required></label>
+                <label>Enter your last name: <input name="lname" type="text" required></label>
+                <label>Enter your email: <input name="email" type="email" required></label>
+                <label>Create a new password: <input name="password" type="password" required pattern="[a-z0-5]{8,}"></label>
             </fieldset>
             <fieldset>
                 <label><input type="radio" name="account-type"> Personal Account</label>
                 <label><input type="radio" name="account-type"> Business Account</label>
-                <label><input type="checkbox" required> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
+                <label><input name="terms" type="checkbox" required> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a></label>
             </fieldset>
             <fieldset>
-                <label>Upload a profile picture: <input type="file" /></label>
-                <label>Input your age (years): <input type="number" min="13" max="120"></label>
+                <label>Upload a profile picture: <input name="pfp" type="file" /></label>
+                <label>Input your age (years): <input name="age" type="number" min="13" max="120"></label>
             </fieldset>
-            <select>
+            <select name="referrer">
                 <label>How did you hear about us?
                     <option value="">(Please select one)</option>
                     <option value="1">Google</option>
@@ -32,7 +32,7 @@
                     <option value="4">Other</option>
                 </label>
             </select>
-            <label>Tell us more about you: <textarea></textarea></label>
+            <label>Tell us more about you: <textarea name="bio" rows="3" cols="30" placeholder="I like coding on the beach..."></textarea></label>
             <input type="submit" value="Submit">
         </form>
     </body>
